# Lattice-Bolzmann-Simulator

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  config.txt  simulator.py
include/: config_reader.h  data_transmitter.h  domain_builder.h  solver.h
include/geometry/: cylinder.h  domain.h  figure.h  rectangle.h
src/: config_reader.cpp  data_transmitter.cpp  domain_builder.cpp  main.cpp  solver.cpp
src/geometry/: cylinder.cpp  domain.cpp  rectangle.cpp
